* Fixed a bug with custom certificate background.
* Fixed a bug with available unit date for different languages then English.
* Fixed a bug with instructors permission to see CoursePress assessments.
* Fixed a bug with course fee with WooCommerce.
* Fixed a bug on workbook page - it show correct answers before student answered.
* Fixed a bug with post status on course edit page.
* Fixed shortcode course_list context attribute.
* Changed redirect after login, for editors it will be now WordPress Dashboard.
* Changed redirect for non-logged users who enter student dashboard URL to login page.
* Added parsing video URL to add autoplay parameter.
* Added ability to auto re-create certificate if file is missing.
* Added permission check when try to download certificate.
* Added ability to show unit description.
* Added ability to login by email too.
* Added key length check for mcrypt function to avoid wrong key size.

= 2.0.2 =
-------------------------------------------------
* Fixed a bug with class autoloader function.
* Added better default CoursePress certificate.
* Added "Settings" and "Support" links on WP plugins page.
* Fixed a bug with import students to course when MarketPress is active.
* Handle situation when student try to add comment to non existing module.
* Fixed "Domain Name" for proper translation.
* Added check to import JSON file.
* Added confirmation popup when student withdraw from the course.
* Fixed non-virtual student login page.
* Removed fakepath file location in file upload.
* Fixed student dashboard page.
* Fixed warning message when user is logged out.
* Fixed untranslated texts.
* Added allow weak password registration.

= 2.0.1 =
------------------------------------------------------
* Fixed: Chat module support for wordpress-chat plugin
* Fixed: Module's unlimited retry attempts
* Fixed: Language Internationalization
* Fixed: compatibility issue with Market Press CSS covering course edit