@@ -16,7 +16,7 @@ class CoursePress_Data_Course {
 	private static $current = array();
 
 	public static function get_format() {
-		return array(
+	    $register_post_type_array = array(
 			'post_type' => self::get_post_type_name(),
 			'post_args' => array(
 				'labels' => array(
@@ -51,6 +51,7 @@ class CoursePress_Data_Course {
 					'delete_others_posts' => 'coursepress_delete_course_cap',
 					'delete_published_posts' => 'coursepress_delete_course_cap',
 					'publish_posts' => 'coursepress_change_course_status_cap',
+					'create_posts' => 'coursepress_create_course_cap',
 				),
 				'query_var' => true,
 				'rewrite' => array(
@@ -63,6 +64,59 @@ class CoursePress_Data_Course {
 				'menu_icon' => CoursePress::$url . 'asset/img/coursepress-icon.png',
 			),
 		);
+		/**
+		 * check is logged?
+		 */
+		if ( ! is_user_logged_in() ) {
+			return $register_post_type_array;
+		}
+		/**
+		 * [...] One Ring to rule them all, One Ring to find them,
+		 * One Ring to bring them all and in the darkness bind them [...]
+		 */
+		if ( current_user_can( 'manage_options' ) ) {
+			return $register_post_type_array;
+		}
+		/**
+		 * is an instructor?
+		 */
+		$user_id = get_current_user_id();
+		$courses = CoursePress_Data_Instructor::count_courses( $user_id );
+		if ( empty( $courses ) ) {
+			return $register_post_type_array;
+		}
+		/**
+		 * get instructor capabilities
+		 */
+		$instructor_capabilities = CoursePress_Core::get_setting( 'instructor/capabilities' );
+		/**
+		 * check has access to courses submenu
+		 */
+		if ( ! isset( $instructor_capabilities['coursepress_courses_cap'] ) || empty( $instructor_capabilities['coursepress_courses_cap'] ) ) {
+				$register_post_type_array['post_args']['capabilities']['edit_posts'] = 'manage_options';
+			return $register_post_type_array;
+		}
+		/**
+		 * check all "list-access" capabilities
+		 */
+		$check_keys = array(
+			'coursepress_change_course_status_cap',
+			'coursepress_change_my_course_status_cap',
+			'coursepress_delete_course_cap',
+			'coursepress_delete_course_cap',
+			'coursepress_delete_my_course_cap',
+			'coursepress_delete_my_course_cap',
+			'coursepress_update_course_cap',
+			'coursepress_update_my_course_cap',
+			'coursepress_view_others_course_cap',
+		);
+		foreach ( $check_keys as $capability ) {
+			if ( isset( $instructor_capabilities[ $capability ] ) && $instructor_capabilities[ $capability ] ) {
+				$register_post_type_array['post_args']['capabilities']['edit_posts'] = $capability;
+				return $register_post_type_array;
+			}
+		}
+		return $register_post_type_array;
 	}
 
 	public static function get_taxonomy() {
